--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Muhammed Fasal</h1>
-            <h3>I'm Indian <span>System Engineer</span>, <span>in Linux</span> and <span>Windows</span>.Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h3>I'm a <span>System Engineer</span>, <span>in Linux</span> and <span>Windows</span>.Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
